# llm-stack-monitor

./: .gitignore  README.md  docker-compose.yml  sonar-projects.properties
ci/github-actions/: ci.yml
llm-stack-monitor-backend/: Dockerfile  docker-compose.yml
llm-stack-monitor-backend/backend/: alembic.ini  database.py  main.py  requirements.txt
llm-stack-monitor-backend/backend/api/: logger.py
llm-stack-monitor-backend/backend/auth/: dependencies.py  jwt_handler.py  routes.py
llm-stack-monitor-backend/backend/db/: database.py
llm-stack-monitor-backend/backend/models/: __init__.py  logger.py  user.py
llm-stack-monitor-backend/backend/routes/: apikey.py  logger.py  protected_routes.py
llm-stack-monitor-backend/backend/utils/: apikey.py
llm-stack-monitor-frontend/: jsconfig.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
llm-stack-monitor-frontend/src/: App.jsx  index.css
llm-stack-monitor-frontend/src/components/: auth-guard.jsx  cost-by-team.jsx  costtrends.jsx  expensechart.jsx  integration-status-header.jsx  mode-toggle.jsx  model-performance.jsx  timeline-usage.jsx
llm-stack-monitor-frontend/src/components/layout/: dashboard-layout.jsx
llm-stack-monitor-frontend/src/components/ui/: button.jsx  chart.jsx  progress.jsx  (+1 more)
llm-stack-monitor-frontend/src/context/: auth-context.jsx
llm-stack-monitor-frontend/src/hooks/: routes.jsx
llm-stack-monitor-frontend/src/lib/: axios.js
llmstack_sdk/: config.py  pyproject.toml  requirements.txt
llmstack_sdk/llmstack/: logger.py
llmstack_sdk/llmstack/openai/client/: client.py
(+4 files in other folders)
