[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmstack-sdk"
version = "0.1.0"
description = "Python SDK for logging LLM traces"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [{ name = "Your Name", email = "you@example.com" }]
dependencies = ["requests"]

[tool.hatch.build.targets.wheel]
include = ["llmstack/**"]
